// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`запрос с получателями с параметром recipientsCount учитывает значение recipientsCount 1`] = `
Array [
  Object {
    "email": "vasya@example.com",
    "name": "Vasiliy Pupkin",
    "type": 1,
  },
  Object {
    "email": "testovichok2013@ya.ru",
    "name": "testovichok2013@ya.ru",
    "type": 3,
  },
  Object {
    "email": "testovichok2014@ya.ru",
    "name": "testovichok2014@ya.ru",
    "type": 3,
  },
  Object {
    "email": "testovichok2015@ya.ru",
    "name": "testovichok2015@ya.ru",
    "type": 3,
  },
  Object {
    "email": "testovichok2016@ya.ru",
    "name": "testovichok2016@ya.ru",
    "type": 3,
  },
]
`;

exports[`множественный запрос happy path (все ответили, иногда ответила такса) 1`] = `
Array [
  Object {
    "header": Object {
      "batchCount": 1,
      "countTotal": 5,
      "countUnread": 1,
      "error": 1,
      "md5": "8a8c16fb6c58e2f1d1f6afdee859cba1",
      "modified": true,
    },
    "messageBatch": Object {
      "messages": Array [
        Object {
          "fid": "13",
          "from": Object {
            "email": "test9080@yandex.kz",
            "name": "Разные буквы",
            "type": 2,
          },
          "hasAttach": false,
          "lid": Array [
            "10",
            "9",
          ],
          "mid": "163255486492185415",
          "modseq": "",
          "scn": "15084",
          "status": Array [
            0,
          ],
          "subjEmpty": false,
          "subjPrefix": "",
          "subjText": "В папку",
          "tab": "default",
          "threadCount": "18",
          "tid": "161285161655207943",
          "timestamp": "1505895123000",
          "types": Array [
            "4",
            "54",
          ],
          "utc_timestamp": "1505895123",
        },
        Object {
          "fid": "13",
          "from": Object {
            "email": "hostruta@yandex.ru",
            "name": "Тестплан Хострута",
            "type": 2,
          },
          "hasAttach": false,
          "lid": Array [
            "10",
            "12",
            "13",
            "7",
            "9",
          ],
          "mid": "162974011515474473",
          "modseq": "",
          "scn": "13583",
          "status": Array [
            0,
          ],
          "subjEmpty": false,
          "subjPrefix": "",
          "subjText": "Тестплан хострута",
          "tab": "default",
          "tid": "162974011515474473",
          "timestamp": "1503066894000",
          "types": Array [
            "4",
            "54",
          ],
          "utc_timestamp": "1503066894",
        },
        Object {
          "attachments": Object {
            "attachments": Array [
              Object {
                "class": "application",
                "display_name": "e-bilet.zip",
                "download_url": "",
                "hid": "1.2",
                "mime_type": "application/octet-stream",
                "size": 210417,
              },
              Object {
                "class": "text",
                "display_name": "mail.html",
                "download_url": "",
                "hid": "1.3",
                "mime_type": "text/html",
                "size": 29562,
              },
            ],
            "count": 2,
            "fullSize": 239979,
            "hasDiskAttaches": false,
          },
          "fid": "13",
          "firstLine": "ELEKTRONİK BİLET Sayın BARAN TOPPARE Türk Hava Yolları olarak sizleri aramızda görmekten mutluluk duyarız. Bu e-posta yolculuğunuz hakkında önemli bilgiler içermekte ve seyahatinizi kolaylaştırmak amacıyla hazırlanmıştır. Içerikte uçuş bilgileriniz, otel rezervasyonu ve araba kiralama ile ilgili linkleri bulabilirsiniz Rezervasyon Kodu SGRMNQ İşlem",
          "from": Object {
            "email": "please_do_not_reply@thy.com",
            "name": "Turk Hava Yollari",
            "type": 2,
          },
          "hasAttach": true,
          "lid": Array [
            "21",
            "22",
          ],
          "mid": "162974011515474456",
          "modseq": "",
          "scn": "13582",
          "status": Array [
            0,
          ],
          "subjEmpty": false,
          "subjPrefix": "",
          "subjText": "Turk Hava Yollari Online Bilet - Bilgi Mesaji thy4.eml",
          "tab": "news",
          "tid": "162974011515474456",
          "timestamp": "1502963110000",
          "types": Array [
            "5",
            "16",
          ],
          "utc_timestamp": "1502963110",
        },
        Object {
          "attachments": Object {
            "attachments": Array [
              Object {
                "class": "application",
                "display_name": "e-bilet.zip",
                "download_url": "",
                "hid": "1.2",
                "mime_type": "application/octet-stream",
                "size": 210417,
              },
              Object {
                "class": "text",
                "display_name": "mail.html",
                "download_url": "",
                "hid": "1.3",
                "mime_type": "text/html",
                "size": 32141,
              },
            ],
            "count": 2,
            "fullSize": 242558,
            "hasDiskAttaches": false,
          },
          "fid": "13",
          "firstLine": "ELEKTRONİK BİLET Sayın BARAN TOPPARE Türk Hava Yolları olarak sizleri aramızda görmekten mutluluk duyarız. Bu e-posta yolculuğunuz hakkında önemli bilgiler içermekte ve seyahatinizi kolaylaştırmak amacıyla hazırlanmıştır. Içerikte uçuş bilgileriniz, otel rezervasyonu ve araba kiralama ile ilgili linkleri bulabilirsiniz Rezervasyon Kodu S3EHSV İşlem",
          "from": Object {
            "email": "please_do_not_reply@thy.com",
            "name": "Turk Hava Yollari",
            "type": 2,
          },
          "hasAttach": true,
          "lid": Array [
            "21",
            "22",
          ],
          "mid": "162974011515474455",
          "modseq": "",
          "scn": "13560",
          "status": Array [
            0,
          ],
          "subjEmpty": false,
          "subjPrefix": "",
          "subjText": "Turk Hava Yollari Online Bilet - Bilgi Mesaji thy1.eml",
          "tab": "social",
          "tid": "162974011515474455",
          "timestamp": "1502963109000",
          "types": Array [
            "5",
            "16",
          ],
          "utc_timestamp": "1502963109",
        },
        Object {
          "fid": "13",
          "firstLine": "﻿ ELECTRONIC TICKET RECEIPT Thank you for your purchase. This is the reservation code: N6MIMM PASSENGER 1 PASSENGER 2 PASSENGER 3 Name: NASTASSIA Name: LIUDMILA Name: MIKHAIL Surname: KLISHEVICH Surname: KLISHEVICH Surname: KLISHEVICH cellular: 9217506555 Ticket number: 0552192155623 Ticket number: 0552192155621 Ticket number: 0552192155622 FLIGHT / CLASS DEPARTURE ARRIVAL AZ491",
          "from": Object {
            "email": "confirmation@alitalia.com",
            "name": "confirmation@alitalia.com",
            "type": 2,
          },
          "hasAttach": false,
          "lid": Array [
            "21",
            "22",
          ],
          "mid": "162974011515474453",
          "modseq": "",
          "scn": "13582",
          "status": Array [
            1,
          ],
          "subjEmpty": false,
          "subjPrefix": "",
          "subjText": "Purchase details summary alitalia-2.eml",
          "tab": "default",
          "tid": "162974011515474453",
          "timestamp": "1502963107000",
          "types": Array [
            "5",
            "16",
          ],
          "utc_timestamp": "1502963107",
        },
      ],
    },
    "widgets": undefined,
  },
  Object {
    "header": Object {
      "batchCount": 1,
      "countTotal": 5,
      "countUnread": 0,
      "error": 1,
      "md5": "815357fc59ea964b395938410ca69a57",
      "modified": true,
    },
    "messageBatch": Object {
      "messages": Array [
        Object {
          "fid": "13",
          "from": Object {
            "email": "test9080@yandex.kz",
            "name": "Разные буквы",
            "type": 2,
          },
          "hasAttach": false,
          "lid": Array [
            "10",
            "9",
          ],
          "mid": "163255486492185415",
          "modseq": "",
          "status": Array [
            0,
          ],
          "subjEmpty": false,
          "subjPrefix": "",
          "subjText": "В папку",
          "tab": "default",
          "tid": "161285161655207943",
          "timestamp": "1505895123000",
          "types": Array [
            "4",
            "54",
          ],
          "utc_timestamp": "1505895123",
        },
        Object {
          "fid": "13",
          "from": Object {
            "email": "test9080@yandex.kz",
            "name": "Разные буквы",
            "type": 2,
          },
          "hasAttach": false,
          "lid": Array [
            "10",
            "9",
          ],
          "mid": "163255486492185234",
          "modseq": "",
          "status": Array [
            0,
          ],
          "subjEmpty": false,
          "subjPrefix": "",
          "subjText": "В папку",
          "tab": "news",
          "tid": "161285161655207943",
          "timestamp": "1505322192000",
          "types": Array [
            "4",
            "54",
          ],
          "utc_timestamp": "1505322192",
        },
        Object {
          "fid": "13",
          "from": Object {
            "email": "hostruta@yandex.ru",
            "name": "Тестплан Хострута",
            "type": 2,
          },
          "hasAttach": false,
          "lid": Array [
            "10",
            "12",
            "13",
            "7",
            "9",
          ],
          "mid": "162974011515474473",
          "modseq": "",
          "status": Array [
            0,
          ],
          "subjEmpty": false,
          "subjPrefix": "",
          "subjText": "Тестплан хострута",
          "tab": "social",
          "tid": "162974011515474473",
          "timestamp": "1503066894000",
          "types": Array [
            "4",
            "54",
          ],
          "utc_timestamp": "1503066894",
        },
        Object {
          "attachments": Object {
            "attachments": Array [
              Object {
                "class": "application",
                "display_name": "e-bilet.zip",
                "download_url": "",
                "hid": "1.2",
                "mime_type": "application/octet-stream",
                "size": 210417,
              },
              Object {
                "class": "text",
                "display_name": "mail.html",
                "download_url": "",
                "hid": "1.3",
                "mime_type": "text/html",
                "size": 29562,
              },
            ],
            "count": 2,
            "fullSize": 239979,
            "hasDiskAttaches": false,
          },
          "fid": "13",
          "firstLine": "ELEKTRONİK BİLET Sayın BARAN TOPPARE Türk Hava Yolları olarak sizleri aramızda görmekten mutluluk duyarız. Bu e-posta yolculuğunuz hakkında önemli bilgiler içermekte ve seyahatinizi kolaylaştırmak amacıyla hazırlanmıştır. Içerikte uçuş bilgileriniz, otel rezervasyonu ve araba kiralama ile ilgili linkleri bulabilirsiniz Rezervasyon Kodu SGRMNQ İşlem",
          "from": Object {
            "email": "please_do_not_reply@thy.com",
            "name": "Turk Hava Yollari",
            "type": 2,
          },
          "hasAttach": true,
          "lid": Array [
            "21",
            "22",
          ],
          "mid": "162974011515474456",
          "modseq": "",
          "status": Array [
            0,
          ],
          "subjEmpty": false,
          "subjPrefix": "",
          "subjText": "Turk Hava Yollari Online Bilet - Bilgi Mesaji thy4.eml",
          "tab": "default",
          "tid": "162974011515474456",
          "timestamp": "1502963110000",
          "types": Array [
            "5",
            "16",
          ],
          "utc_timestamp": "1502963110",
        },
        Object {
          "attachments": Object {
            "attachments": Array [
              Object {
                "class": "application",
                "display_name": "e-bilet.zip",
                "download_url": "",
                "hid": "1.2",
                "mime_type": "application/octet-stream",
                "size": 210417,
              },
              Object {
                "class": "text",
                "display_name": "mail.html",
                "download_url": "",
                "hid": "1.3",
                "mime_type": "text/html",
                "size": 32141,
              },
            ],
            "count": 2,
            "fullSize": 242558,
            "hasDiskAttaches": false,
          },
          "fid": "13",
          "firstLine": "ELEKTRONİK BİLET Sayın BARAN TOPPARE Türk Hava Yolları olarak sizleri aramızda görmekten mutluluk duyarız. Bu e-posta yolculuğunuz hakkında önemli bilgiler içermekte ve seyahatinizi kolaylaştırmak amacıyla hazırlanmıştır. Içerikte uçuş bilgileriniz, otel rezervasyonu ve araba kiralama ile ilgili linkleri bulabilirsiniz Rezervasyon Kodu S3EHSV İşlem",
          "from": Object {
            "email": "please_do_not_reply@thy.com",
            "name": "Turk Hava Yollari",
            "type": 2,
          },
          "hasAttach": true,
          "lid": Array [
            "21",
            "22",
          ],
          "mid": "162974011515474455",
          "modseq": "",
          "status": Array [
            0,
          ],
          "subjEmpty": false,
          "subjPrefix": "",
          "subjText": "Turk Hava Yollari Online Bilet - Bilgi Mesaji thy1.eml",
          "tab": "default",
          "tid": "162974011515474455",
          "timestamp": "1502963109000",
          "types": Array [
            "5",
            "16",
          ],
          "utc_timestamp": "1502963109",
        },
      ],
    },
    "widgets": undefined,
  },
  Object {
    "header": Object {
      "batchCount": 1,
      "countTotal": 5,
      "countUnread": 0,
      "error": 1,
      "md5": "54a1e9a02a4bbee883e6c74f3bee1b9f",
      "modified": true,
    },
    "messageBatch": Object {
      "messages": Array [
        Object {
          "fid": "7",
          "firstLine": "123456654321",
          "from": Object {
            "email": "test17101994@yandex.ru",
            "name": "Имя Фамилия 1111111111111111111",
            "type": 2,
          },
          "hasAttach": false,
          "lid": Array [
            "10",
            "9",
          ],
          "mid": "163818436445607078",
          "modseq": "",
          "status": Array [
            0,
          ],
          "subjEmpty": false,
          "subjPrefix": "Re:",
          "subjText": "Attach",
          "tab": "default",
          "threadCount": "31",
          "tid": "163536961468896202",
          "timestamp": "1509541820000",
          "types": Array [
            "4",
            "54",
          ],
          "utc_timestamp": "1509541820",
        },
        Object {
          "fid": "7",
          "firstLine": "123321123",
          "from": Object {
            "email": "test17101994@yandex.ru",
            "name": "Имя Фамилия 1111111111111111111",
            "type": 2,
          },
          "hasAttach": false,
          "lid": Array [
            "10",
            "9",
          ],
          "mid": "163818436445607077",
          "modseq": "",
          "status": Array [
            0,
          ],
          "subjEmpty": false,
          "subjPrefix": "Re:",
          "subjText": "Attach",
          "tab": "default",
          "threadCount": "31",
          "tid": "163536961468896202",
          "timestamp": "1509541755000",
          "types": Array [
            "4",
            "54",
          ],
          "utc_timestamp": "1509541755",
        },
        Object {
          "fid": "7",
          "from": Object {
            "email": "test17101994@yandex.ru",
            "name": "Имя Фамилия 1111111111111111111",
            "type": 2,
          },
          "hasAttach": false,
          "lid": Array [
            "10",
            "9",
          ],
          "mid": "163818436445607074",
          "modseq": "",
          "status": Array [
            0,
          ],
          "subjEmpty": false,
          "subjPrefix": "",
          "subjText": "Attach",
          "tab": "default",
          "threadCount": "31",
          "tid": "163536961468896202",
          "timestamp": "1509541285000",
          "types": Array [
            "4",
            "54",
          ],
          "utc_timestamp": "1509541285",
        },
        Object {
          "fid": "7",
          "from": Object {
            "email": "test17101994@yandex.ru",
            "name": "Имя Фамилия 1111111111111111111",
            "type": 2,
          },
          "hasAttach": false,
          "lid": Array [
            "10",
            "9",
          ],
          "mid": "163818436445607073",
          "modseq": "",
          "status": Array [
            0,
          ],
          "subjEmpty": false,
          "subjPrefix": "",
          "subjText": "Attach",
          "tab": "news",
          "threadCount": "31",
          "tid": "163536961468896202",
          "timestamp": "1509540999000",
          "types": Array [
            "4",
            "54",
          ],
          "utc_timestamp": "1509540999",
        },
        Object {
          "fid": "4",
          "firstLine": "Djjdhff",
          "from": Object {
            "email": "testovichok2016@yandex.ru",
            "name": "Тестовичок Тестовый Тестовичус 11111111111111111",
            "type": 2,
          },
          "hasAttach": false,
          "lid": Array [
            "10",
            "9",
          ],
          "mid": "163818436445606996",
          "modseq": "",
          "status": Array [
            0,
          ],
          "subjEmpty": false,
          "subjPrefix": "Re:",
          "subjText": "Attach",
          "tab": "social",
          "threadCount": "31",
          "tid": "163536961468896202",
          "timestamp": "1508940628000",
          "types": Array [
            "4",
            "54",
          ],
          "utc_timestamp": "1508940628",
        },
      ],
    },
    "widgets": Array [
      Object {
        "info": Object {
          "double": false,
          "expire_date": "2017-10-13T15:50:00Z",
          "mid": "163536961468896185",
          "subtype": "ticket",
          "type": "avia",
          "valid": false,
        },
      },
    ],
  },
  Object {
    "header": Object {
      "batchCount": 1,
      "countTotal": 5,
      "countUnread": 5,
      "error": 1,
      "md5": "1eae96dc2dbd7e44ffea5e3971794840",
      "modified": true,
    },
    "messageBatch": Object {
      "messages": Array [
        Object {
          "fid": "1",
          "firstLine": "Номера электронных билетов! 26.03.2013 В данном электронном письме содержатся номера ваших электронных билетов, которые Вы можете распечатать здесь. Обращаем Ваше внимание, что маршрутная квитанция будет",
          "from": Object {
            "email": "flights@trip.ru",
            "name": "flights@trip.ru",
            "type": 2,
          },
          "hasAttach": false,
          "lid": Array [
            "21",
            "22",
          ],
          "mid": "163536961468896186",
          "modseq": "",
          "status": Array [
            1,
          ],
          "subjEmpty": false,
          "subjPrefix": "",
          "subjText": "Электронные Билеты - 7ESMI2 tripru-1.eml",
          "tab": "default",
          "tid": "163536961468896186",
          "timestamp": "1507813181000",
          "types": Array [
            "5",
            "16",
          ],
          "utc_timestamp": "1507813181",
        },
        Object {
          "fid": "1",
          "firstLine": "Информация по заказу D31438422",
          "from": Object {
            "email": "noreply@onetwotrip.com",
            "name": "OneTwoTrip",
            "type": 2,
          },
          "hasAttach": false,
          "lid": Array [
            "17",
            "21",
            "22",
          ],
          "mid": "163536961468896185",
          "modseq": "",
          "status": Array [
            1,
          ],
          "subjEmpty": false,
          "subjPrefix": "",
          "subjText": "Заказ D31438422 onetwotrip-2.eml",
          "tab": "news",
          "tid": "163536961468896185",
          "timestamp": "1507813180000",
          "types": Array [
            "5",
            "16",
          ],
          "utc_timestamp": "1507813180",
        },
        Object {
          "fid": "1",
          "firstLine": "anywayanyday Создана бронь №160698120 от 16 апреля на сумму 22962 рубля. Требуется оплатить до 17 апреля 08:10 (+03:00). NIKOLAY VOYTYUK RU 710221977 Заказ №160698120 от 16 апреля 2017 Москва Шереметьево (E) → Брюссель Брюссель национальный ✈ Вылет",
          "from": Object {
            "email": "order@anywayanyday.ru",
            "name": "anywayanyday",
            "type": 2,
          },
          "hasAttach": false,
          "lid": Array [
            "21",
            "22",
          ],
          "mid": "163536961468896183",
          "modseq": "",
          "status": Array [
            1,
          ],
          "subjEmpty": false,
          "subjPrefix": "",
          "subjText": "Информация о брони. 160698120 (16.04.2017) anyway_from_html2.eml",
          "tab": "social",
          "tid": "163536961468896183",
          "timestamp": "1507813179000",
          "types": Array [
            "5",
            "16",
          ],
          "utc_timestamp": "1507813179",
        },
        Object {
          "fid": "1",
          "firstLine": "Заказ E02314694.   ",
          "from": Object {
            "email": "noreply@onetwotrip.com",
            "name": "OneTwoTrip",
            "type": 2,
          },
          "hasAttach": false,
          "lid": Array [
            "17",
            "21",
            "22",
          ],
          "mid": "163536961468896184",
          "modseq": "",
          "status": Array [
            1,
          ],
          "subjEmpty": false,
          "subjPrefix": "",
          "subjText": "Заказ D222 onetwotrip.eml",
          "tab": "default",
          "tid": "163536961468896184",
          "timestamp": "1507813179000",
          "types": Array [
            "5",
            "16",
          ],
          "utc_timestamp": "1507813179",
        },
        Object {
          "fid": "1",
          "firstLine": "anywayanyday ",
          "from": Object {
            "email": "order@anywayanyday.ru",
            "name": "anywayanyday",
            "type": 2,
          },
          "hasAttach": false,
          "lid": Array [
            "17",
            "21",
            "22",
          ],
          "mid": "163536961468896182",
          "modseq": "",
          "status": Array [
            1,
          ],
          "subjEmpty": false,
          "subjPrefix": "",
          "subjText": "Информация о заказе 160631838 (17.04.2017) anyway_from_html1.eml",
          "tab": "default",
          "tid": "163536961468896182",
          "timestamp": "1507813178000",
          "types": Array [
            "5",
            "16",
          ],
          "utc_timestamp": "1507813178",
        },
      ],
    },
    "widgets": undefined,
  },
]
`;

exports[`множественный запрос не все ответили 1`] = `
Array [
  Object {
    "header": Object {
      "batchCount": 1,
      "countTotal": 0,
      "countUnread": 0,
      "error": 3,
      "md5": "",
      "modified": true,
    },
    "messageBatch": Object {},
  },
  Object {
    "header": Object {
      "batchCount": 1,
      "countTotal": 5,
      "countUnread": 0,
      "error": 1,
      "md5": "815357fc59ea964b395938410ca69a57",
      "modified": true,
    },
    "messageBatch": Object {
      "messages": Array [
        Object {
          "fid": "13",
          "from": Object {
            "email": "test9080@yandex.kz",
            "name": "Разные буквы",
            "type": 2,
          },
          "hasAttach": false,
          "lid": Array [
            "10",
            "9",
          ],
          "mid": "163255486492185415",
          "modseq": "",
          "status": Array [
            0,
          ],
          "subjEmpty": false,
          "subjPrefix": "",
          "subjText": "В папку",
          "tab": "default",
          "tid": "161285161655207943",
          "timestamp": "1505895123000",
          "types": Array [
            "4",
            "54",
          ],
          "utc_timestamp": "1505895123",
        },
        Object {
          "fid": "13",
          "from": Object {
            "email": "test9080@yandex.kz",
            "name": "Разные буквы",
            "type": 2,
          },
          "hasAttach": false,
          "lid": Array [
            "10",
            "9",
          ],
          "mid": "163255486492185234",
          "modseq": "",
          "status": Array [
            0,
          ],
          "subjEmpty": false,
          "subjPrefix": "",
          "subjText": "В папку",
          "tab": "news",
          "tid": "161285161655207943",
          "timestamp": "1505322192000",
          "types": Array [
            "4",
            "54",
          ],
          "utc_timestamp": "1505322192",
        },
        Object {
          "fid": "13",
          "from": Object {
            "email": "hostruta@yandex.ru",
            "name": "Тестплан Хострута",
            "type": 2,
          },
          "hasAttach": false,
          "lid": Array [
            "10",
            "12",
            "13",
            "7",
            "9",
          ],
          "mid": "162974011515474473",
          "modseq": "",
          "status": Array [
            0,
          ],
          "subjEmpty": false,
          "subjPrefix": "",
          "subjText": "Тестплан хострута",
          "tab": "social",
          "tid": "162974011515474473",
          "timestamp": "1503066894000",
          "types": Array [
            "4",
            "54",
          ],
          "utc_timestamp": "1503066894",
        },
        Object {
          "attachments": Object {
            "attachments": Array [
              Object {
                "class": "application",
                "display_name": "e-bilet.zip",
                "download_url": "",
                "hid": "1.2",
                "mime_type": "application/octet-stream",
                "size": 210417,
              },
              Object {
                "class": "text",
                "display_name": "mail.html",
                "download_url": "",
                "hid": "1.3",
                "mime_type": "text/html",
                "size": 29562,
              },
            ],
            "count": 2,
            "fullSize": 239979,
            "hasDiskAttaches": false,
          },
          "fid": "13",
          "firstLine": "ELEKTRONİK BİLET Sayın BARAN TOPPARE Türk Hava Yolları olarak sizleri aramızda görmekten mutluluk duyarız. Bu e-posta yolculuğunuz hakkında önemli bilgiler içermekte ve seyahatinizi kolaylaştırmak amacıyla hazırlanmıştır. Içerikte uçuş bilgileriniz, otel rezervasyonu ve araba kiralama ile ilgili linkleri bulabilirsiniz Rezervasyon Kodu SGRMNQ İşlem",
          "from": Object {
            "email": "please_do_not_reply@thy.com",
            "name": "Turk Hava Yollari",
            "type": 2,
          },
          "hasAttach": true,
          "lid": Array [
            "21",
            "22",
          ],
          "mid": "162974011515474456",
          "modseq": "",
          "status": Array [
            0,
          ],
          "subjEmpty": false,
          "subjPrefix": "",
          "subjText": "Turk Hava Yollari Online Bilet - Bilgi Mesaji thy4.eml",
          "tab": "default",
          "tid": "162974011515474456",
          "timestamp": "1502963110000",
          "types": Array [
            "5",
            "16",
          ],
          "utc_timestamp": "1502963110",
        },
        Object {
          "attachments": Object {
            "attachments": Array [
              Object {
                "class": "application",
                "display_name": "e-bilet.zip",
                "download_url": "",
                "hid": "1.2",
                "mime_type": "application/octet-stream",
                "size": 210417,
              },
              Object {
                "class": "text",
                "display_name": "mail.html",
                "download_url": "",
                "hid": "1.3",
                "mime_type": "text/html",
                "size": 32141,
              },
            ],
            "count": 2,
            "fullSize": 242558,
            "hasDiskAttaches": false,
          },
          "fid": "13",
          "firstLine": "ELEKTRONİK BİLET Sayın BARAN TOPPARE Türk Hava Yolları olarak sizleri aramızda görmekten mutluluk duyarız. Bu e-posta yolculuğunuz hakkında önemli bilgiler içermekte ve seyahatinizi kolaylaştırmak amacıyla hazırlanmıştır. Içerikte uçuş bilgileriniz, otel rezervasyonu ve araba kiralama ile ilgili linkleri bulabilirsiniz Rezervasyon Kodu S3EHSV İşlem",
          "from": Object {
            "email": "please_do_not_reply@thy.com",
            "name": "Turk Hava Yollari",
            "type": 2,
          },
          "hasAttach": true,
          "lid": Array [
            "21",
            "22",
          ],
          "mid": "162974011515474455",
          "modseq": "",
          "status": Array [
            0,
          ],
          "subjEmpty": false,
          "subjPrefix": "",
          "subjText": "Turk Hava Yollari Online Bilet - Bilgi Mesaji thy1.eml",
          "tab": "default",
          "tid": "162974011515474455",
          "timestamp": "1502963109000",
          "types": Array [
            "5",
            "16",
          ],
          "utc_timestamp": "1502963109",
        },
      ],
    },
    "widgets": Array [],
  },
  Object {
    "header": Object {
      "batchCount": 1,
      "countTotal": 0,
      "countUnread": 0,
      "error": 3,
      "md5": "",
      "modified": true,
    },
    "messageBatch": Object {},
  },
  Object {
    "header": Object {
      "batchCount": 1,
      "countTotal": 5,
      "countUnread": 5,
      "error": 1,
      "md5": "1eae96dc2dbd7e44ffea5e3971794840",
      "modified": true,
    },
    "messageBatch": Object {
      "messages": Array [
        Object {
          "fid": "1",
          "firstLine": "Номера электронных билетов! 26.03.2013 В данном электронном письме содержатся номера ваших электронных билетов, которые Вы можете распечатать здесь. Обращаем Ваше внимание, что маршрутная квитанция будет",
          "from": Object {
            "email": "flights@trip.ru",
            "name": "flights@trip.ru",
            "type": 2,
          },
          "hasAttach": false,
          "lid": Array [
            "21",
            "22",
          ],
          "mid": "163536961468896186",
          "modseq": "",
          "status": Array [
            1,
          ],
          "subjEmpty": false,
          "subjPrefix": "",
          "subjText": "Электронные Билеты - 7ESMI2 tripru-1.eml",
          "tab": "default",
          "tid": "163536961468896186",
          "timestamp": "1507813181000",
          "types": Array [
            "5",
            "16",
          ],
          "utc_timestamp": "1507813181",
        },
        Object {
          "fid": "1",
          "firstLine": "Информация по заказу D31438422",
          "from": Object {
            "email": "noreply@onetwotrip.com",
            "name": "OneTwoTrip",
            "type": 2,
          },
          "hasAttach": false,
          "lid": Array [
            "17",
            "21",
            "22",
          ],
          "mid": "163536961468896185",
          "modseq": "",
          "status": Array [
            1,
          ],
          "subjEmpty": false,
          "subjPrefix": "",
          "subjText": "Заказ D31438422 onetwotrip-2.eml",
          "tab": "news",
          "tid": "163536961468896185",
          "timestamp": "1507813180000",
          "types": Array [
            "5",
            "16",
          ],
          "utc_timestamp": "1507813180",
        },
        Object {
          "fid": "1",
          "firstLine": "anywayanyday Создана бронь №160698120 от 16 апреля на сумму 22962 рубля. Требуется оплатить до 17 апреля 08:10 (+03:00). NIKOLAY VOYTYUK RU 710221977 Заказ №160698120 от 16 апреля 2017 Москва Шереметьево (E) → Брюссель Брюссель национальный ✈ Вылет",
          "from": Object {
            "email": "order@anywayanyday.ru",
            "name": "anywayanyday",
            "type": 2,
          },
          "hasAttach": false,
          "lid": Array [
            "21",
            "22",
          ],
          "mid": "163536961468896183",
          "modseq": "",
          "status": Array [
            1,
          ],
          "subjEmpty": false,
          "subjPrefix": "",
          "subjText": "Информация о брони. 160698120 (16.04.2017) anyway_from_html2.eml",
          "tab": "social",
          "tid": "163536961468896183",
          "timestamp": "1507813179000",
          "types": Array [
            "5",
            "16",
          ],
          "utc_timestamp": "1507813179",
        },
        Object {
          "fid": "1",
          "firstLine": "Заказ E02314694.   ",
          "from": Object {
            "email": "noreply@onetwotrip.com",
            "name": "OneTwoTrip",
            "type": 2,
          },
          "hasAttach": false,
          "lid": Array [
            "17",
            "21",
            "22",
          ],
          "mid": "163536961468896184",
          "modseq": "",
          "status": Array [
            1,
          ],
          "subjEmpty": false,
          "subjPrefix": "",
          "subjText": "Заказ D222 onetwotrip.eml",
          "tab": "default",
          "tid": "163536961468896184",
          "timestamp": "1507813179000",
          "types": Array [
            "5",
            "16",
          ],
          "utc_timestamp": "1507813179",
        },
        Object {
          "fid": "1",
          "firstLine": "anywayanyday ",
          "from": Object {
            "email": "order@anywayanyday.ru",
            "name": "anywayanyday",
            "type": 2,
          },
          "hasAttach": false,
          "lid": Array [
            "17",
            "21",
            "22",
          ],
          "mid": "163536961468896182",
          "modseq": "",
          "status": Array [
            1,
          ],
          "subjEmpty": false,
          "subjPrefix": "",
          "subjText": "Информация о заказе 160631838 (17.04.2017) anyway_from_html1.eml",
          "tab": "default",
          "tid": "163536961468896182",
          "timestamp": "1507813178000",
          "types": Array [
            "5",
            "16",
          ],
          "utc_timestamp": "1507813178",
        },
      ],
    },
    "widgets": Array [],
  },
]
`;

exports[`одиночный запрос happy path 1`] = `
Array [
  Object {
    "header": Object {
      "batchCount": 1,
      "countTotal": 5,
      "countUnread": 0,
      "error": 1,
      "md5": "815357fc59ea964b395938410ca69a57",
      "modified": true,
    },
    "messageBatch": Object {
      "messages": Array [
        Object {
          "fid": "13",
          "from": Object {
            "email": "test9080@yandex.kz",
            "name": "Разные буквы",
            "type": 2,
          },
          "hasAttach": false,
          "lid": Array [
            "10",
            "9",
          ],
          "mid": "163255486492185415",
          "modseq": "",
          "status": Array [
            0,
          ],
          "subjEmpty": false,
          "subjPrefix": "",
          "subjText": "В папку",
          "tab": "default",
          "tid": "161285161655207943",
          "timestamp": "1505895123000",
          "types": Array [
            "4",
            "54",
          ],
          "utc_timestamp": "1505895123",
        },
        Object {
          "fid": "13",
          "from": Object {
            "email": "test9080@yandex.kz",
            "name": "Разные буквы",
            "type": 2,
          },
          "hasAttach": false,
          "lid": Array [
            "10",
            "9",
          ],
          "mid": "163255486492185234",
          "modseq": "",
          "status": Array [
            0,
          ],
          "subjEmpty": false,
          "subjPrefix": "",
          "subjText": "В папку",
          "tab": "news",
          "tid": "161285161655207943",
          "timestamp": "1505322192000",
          "types": Array [
            "4",
            "54",
          ],
          "utc_timestamp": "1505322192",
        },
        Object {
          "fid": "13",
          "from": Object {
            "email": "hostruta@yandex.ru",
            "name": "Тестплан Хострута",
            "type": 2,
          },
          "hasAttach": false,
          "lid": Array [
            "10",
            "12",
            "13",
            "7",
            "9",
          ],
          "mid": "162974011515474473",
          "modseq": "",
          "status": Array [
            0,
          ],
          "subjEmpty": false,
          "subjPrefix": "",
          "subjText": "Тестплан хострута",
          "tab": "social",
          "tid": "162974011515474473",
          "timestamp": "1503066894000",
          "types": Array [
            "4",
            "54",
          ],
          "utc_timestamp": "1503066894",
        },
        Object {
          "attachments": Object {
            "attachments": Array [
              Object {
                "class": "application",
                "display_name": "e-bilet.zip",
                "download_url": "",
                "hid": "1.2",
                "mime_type": "application/octet-stream",
                "size": 210417,
              },
              Object {
                "class": "text",
                "display_name": "mail.html",
                "download_url": "",
                "hid": "1.3",
                "mime_type": "text/html",
                "size": 29562,
              },
            ],
            "count": 2,
            "fullSize": 239979,
            "hasDiskAttaches": false,
          },
          "fid": "13",
          "firstLine": "ELEKTRONİK BİLET Sayın BARAN TOPPARE Türk Hava Yolları olarak sizleri aramızda görmekten mutluluk duyarız. Bu e-posta yolculuğunuz hakkında önemli bilgiler içermekte ve seyahatinizi kolaylaştırmak amacıyla hazırlanmıştır. Içerikte uçuş bilgileriniz, otel rezervasyonu ve araba kiralama ile ilgili linkleri bulabilirsiniz Rezervasyon Kodu SGRMNQ İşlem",
          "from": Object {
            "email": "please_do_not_reply@thy.com",
            "name": "Turk Hava Yollari",
            "type": 2,
          },
          "hasAttach": true,
          "lid": Array [
            "21",
            "22",
          ],
          "mid": "162974011515474456",
          "modseq": "",
          "status": Array [
            0,
          ],
          "subjEmpty": false,
          "subjPrefix": "",
          "subjText": "Turk Hava Yollari Online Bilet - Bilgi Mesaji thy4.eml",
          "tab": "default",
          "tid": "162974011515474456",
          "timestamp": "1502963110000",
          "types": Array [
            "5",
            "16",
          ],
          "utc_timestamp": "1502963110",
        },
        Object {
          "attachments": Object {
            "attachments": Array [
              Object {
                "class": "application",
                "display_name": "e-bilet.zip",
                "download_url": "",
                "hid": "1.2",
                "mime_type": "application/octet-stream",
                "size": 210417,
              },
              Object {
                "class": "text",
                "display_name": "mail.html",
                "download_url": "",
                "hid": "1.3",
                "mime_type": "text/html",
                "size": 32141,
              },
            ],
            "count": 2,
            "fullSize": 242558,
            "hasDiskAttaches": false,
          },
          "fid": "13",
          "firstLine": "ELEKTRONİK BİLET Sayın BARAN TOPPARE Türk Hava Yolları olarak sizleri aramızda görmekten mutluluk duyarız. Bu e-posta yolculuğunuz hakkında önemli bilgiler içermekte ve seyahatinizi kolaylaştırmak amacıyla hazırlanmıştır. Içerikte uçuş bilgileriniz, otel rezervasyonu ve araba kiralama ile ilgili linkleri bulabilirsiniz Rezervasyon Kodu S3EHSV İşlem",
          "from": Object {
            "email": "please_do_not_reply@thy.com",
            "name": "Turk Hava Yollari",
            "type": 2,
          },
          "hasAttach": true,
          "lid": Array [
            "21",
            "22",
          ],
          "mid": "162974011515474455",
          "modseq": "",
          "status": Array [
            0,
          ],
          "subjEmpty": false,
          "subjPrefix": "",
          "subjText": "Turk Hava Yollari Online Bilet - Bilgi Mesaji thy1.eml",
          "tab": "default",
          "tid": "162974011515474455",
          "timestamp": "1502963109000",
          "types": Array [
            "5",
            "16",
          ],
          "utc_timestamp": "1502963109",
        },
      ],
    },
    "widgets": Array [
      Object {
        "info": Object {
          "double": false,
          "expire_date": "2017-10-13T15:50:00Z",
          "mid": "163536961468896185",
          "subtype": "ticket",
          "type": "avia",
          "valid": false,
        },
      },
    ],
  },
]
`;
